# service-template

./: .env.example  .gitignore  README.md  docker-compose.yml  mise.toml
backend/: Dockerfile  fly.toml  pyproject.toml  railway.toml
backend/src/: main.py
backend/tests/: test_main.py
frontend/: Dockerfile.dev  package.json  tailwind.config.ts
frontend/__tests__/: page.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/app/health/: page.tsx
scripts/: setup-env.sh
supabase/: config.toml
supabase/migrations/: 20250101000000_initial_schema.sql
